# eidetic-os

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml  test-publish.yml
atlas_os/: __init__.py  __main__.py  _paths.py  _probe.py  _skills.py  audit.py  cli.py  gitutil.py  marketplace.py  mcp_client.py  mcp_server.py  mcp_skill.py  packs.py  sandbox.py  security.py  vector_backend.py  vectordb.py
atlas_os/dashboard/: app.py  data.py
atlas_os/dashboard/static/: style.css
atlas_os/dashboard/templates/: _icons.html  audit.html  base.html  health.html  scheduled.html  search.html  skill_detail.html  skills.html  vectors.html
atlas_os/vector_backends/: __init__.py  chroma_backend.py  lancedb_backend.py  sqlite_backend.py
dashboard/: README.md
docs/: ARCHITECTURE.md  CLI-REFERENCE.md  CONFIGURATION.md  DATA-CLASSIFICATION.md  EXAMPLES.md  FAQ.md  MIGRATION.md  PUBLISHING.md  QUICKSTART.md  README.md  REBUILD.md  SCHEDULED-TASKS.md  SCRIPTS.md  SETUP.md  SKILLS-CATALOGUE.md  SKILLS-FRAMEWORK.md  TUTORIAL.md
docs/features/: README.md  dashboard.md  email-reports.md  extensions.md  git-automation.md  git-hardening.md  health-and-dashboard.md  knowledge-graph.md  knowledge-vault.md  mcp-skills.md  rag-search.md  security.md  session-capture.md  skills-and-automation.md  skills-marketplace.md  trading-sdk.md  vector-backends.md
eidetic_os/: __init__.py  __main__.py  _paths.py  _probe.py  _skills.py  audit.py  audit_crypto.py  backends.py  cli.py  facts.py  fileio.py  filelock.py  frontmatter.py  git_sync.py  gitutil.py  marketplace.py  mcp_client.py  mcp_server.py  mcp_skill.py  memory_scoring.py  netio.py  packs.py  rag.py  retry.py  sandbox.py  scriptkit.py  security.py  sleeptime.py  vector_backend.py  vectordb.py
eidetic_os/channels/: __init__.py  base.py  slack.py  telegram.py  webhook.py
eidetic_os/dashboard/: __init__.py  app.py  data.py  data_ext.py
eidetic_os/dashboard/static/: dashboard.html  style.css
eidetic_os/dashboard/templates/: 404.html  _icons.html  audit.html  base.html  graph.html  health.html  scheduled.html  search.html  skill_detail.html  vectors.html
eidetic_os/dashboard/ui/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
eidetic_os/dashboard/ui/src/: App.tsx  index.css
eidetic_os/dashboard/ui/src/components/: GraphView.tsx  kit.tsx
eidetic_os/dashboard/ui/src/lib/: api.ts  sample.ts
eidetic_os/dashboard/ui/src/tabs/: Memory.tsx  Overview.tsx  Pipelines.tsx  RagSearch.tsx  Security.tsx  Settings.tsx  Skills.tsx
eidetic_os/extensions/: __init__.py  base.py
eidetic_os/extensions/jobs/: __init__.py
eidetic_os/extensions/trading/: __init__.py
eidetic_os/extensions/voice/: __init__.py
eidetic_os/vector_backends/: __init__.py  chroma_backend.py  lancedb_backend.py  sqlite_backend.py  valkey_backend.py
legacy-pypi-stub/: README.md  pyproject.toml
obsidian-plugin/: manifest.json  package.json
posts/: compiled-email.html  devto-article.md  hackernews.md  linkedin.md  reddit-ai-agents.md  reddit-localllama.md  reddit-obsidian.md
schemas/: enforce_schemas.py  frontmatter-schemas.md
scripts/: _bootstrap.py  build_graph.py  embed_vault.py  health_check.py  make_demo_gif.py  make_doc_gifs.py  rag_search.py  save_sessions.py  send_email.py  trading_briefing.py  vault_changelog.py  vault_commit.py
skills/: registry.json
skills/afternoon-job-tracker-update/: SKILL.md
skills/afternoon-session-capture/: SKILL.md
skills/atlas-daily-report-email/: SKILL.md
skills/daily-job-tracker-update/: SKILL.md
skills/daily-session-capture/: SKILL.md
skills/daily-trading-report/: SKILL.md
skills/friday-it-newsletter/: SKILL.md
skills/generate-vault-report-doc/: SKILL.md
skills/inbox-triage-digest/: SKILL.md
skills/morning-session-capture/: SKILL.md
skills/nightly-obsidian-index/: SKILL.md
skills/nightly-rag-incremental/: SKILL.md
skills/spreadsheet-analysis/: SKILL.md
skills/topic-research-brief/: SKILL.md
skills/vault-lint-report/: SKILL.md
skills/weekly-digest-report/: SKILL.md
skills/weekly-rag-full-reembed/: SKILL.md
skills/weekly-system-health-check/: SKILL.md
templates/: CLAUDE.md.template  ops-dashboard.html
templates/memory-structure/: MEMORY.md.template
templates/memory-structure/example-memories/: example-feedback.md  example-user-profile.md
templates/vault-skeleton/: .claude-index.md.template  Operations Dashboard.md
templates/vault-skeleton/wiki/: hot.md.template  index.md.template  log.md.template
tests/: conftest.py  test_audit.py  test_audit_crypto.py  test_backends.py  test_channels.py  test_cli.py  test_dashboard.py  test_embed_vault.py  test_extensions.py  test_fileio.py  test_filelock.py  test_frontmatter.py  test_git_sync.py  test_gitutil.py  test_graph.py  test_health_check.py  test_integration.py  test_marketplace.py  test_mcp.py  test_memory_scoring.py  test_migration.py  test_netio.py  test_rag.py  test_retry.py  test_save_sessions.py  test_scriptkit.py  test_security.py  test_setup_wizard.py  test_skills.py  test_sleeptime.py  test_valkey_backend.py  test_vector_backends.py  test_vectordb.py
trading/: README.md  __init__.py  config.py.example  core.py  freqtrade_bridge.config.json  freqtrade_bridge.py
trading/agents/: __init__.py  fundamentals.py  news.py  portfolio.py  sentiment.py  technical.py
