[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-os"
dynamic = ["version"]
description = "Atlas OS — A personal AI operating system built on Claude Cowork. Job search automation, trading intelligence, RAG knowledge management, and 17+ automated pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["ai", "rag", "obsidian", "knowledge-management", "local-first", "claude", "automation"]
authors = [{ name = "Paul Holland" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Indexing",
  "Topic :: Utilities",
]
dependencies = [
  "requests>=2.28",
  "pyyaml>=6.0",
  "typer>=0.12",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
pdf = ["pdfplumber>=0.10"]
# ── Extension extras ───────────────────────────────────────────────────────
# Domain-specific extensions (atlas_os/extensions/) ship with the package and are
# discovered via the [project.entry-points] below, but their heavier third-party
# dependencies are opt-in. Install one with e.g. `pip install 'atlas-os[trading]'`.
trading = ["yfinance>=0.2"]
# voice (TTS) and jobs (tracker) are currently dependency-free stubs; the extras
# exist so users can opt in now and pick up real deps as the modules are built.
voice = []
jobs = []
# Production-scale RAG: the sqlite-vec extension accelerates vector search.
# Without it the store transparently falls back to a (NumPy-accelerated)
# brute-force cosine scan, so this extra is optional. NumPy further speeds the
# fallback when present.
vector = ["sqlite-vec>=0.1.6", "numpy>=1.24"]
# ── Pluggable vector backends (VECTOR_BACKEND) ──────────────────────────────
# The default SQLite backend needs nothing extra. These opt-in extras swap in an
# alternative engine for larger or more demanding indexes — pick one with e.g.
# `pip install 'atlas-os[lancedb]'`, then set VECTOR_BACKEND in your .env.
# LanceDB: columnar, on-disk, zero-copy scans + rich metadata filtering.
lancedb = ["lancedb>=0.5"]
# ChromaDB: a popular embedding database with a persistent local client.
chroma = ["chromadb>=0.5"]
# The local web dashboard (`atlas dashboard`). Flask + Jinja2 only — no JS build
# step, no client-side framework. Kept optional so the core install stays slim.
dashboard = ["flask>=3.0"]
all = [
  "pdfplumber>=0.10", "yfinance>=0.2", "sqlite-vec>=0.1.6", "numpy>=1.24",
  "flask>=3.0", "lancedb>=0.5", "chromadb>=0.5",
]

[project.urls]
Homepage = "https://github.com/paulholland511/atlas-os"
Documentation = "https://github.com/paulholland511/atlas-os/tree/main/docs"
Repository = "https://github.com/paulholland511/atlas-os"
Changelog = "https://github.com/paulholland511/atlas-os/blob/main/CHANGELOG.md"

[project.scripts]
atlas = "atlas_os.cli:app"

# Extension discovery. The CLI scans this entry-point group at startup and loads
# every registered AtlasExtension subclass onto the `atlas` app, so the core
# never imports a domain module directly. Third-party packages add their own
# extensions by registering under the same group. These bundled three are also
# listed in atlas_os/extensions/__init__.py (BUILTIN_EXTENSIONS) so a source
# checkout discovers them without installed entry-point metadata.
[project.entry-points."atlas_os.extensions"]
trading = "atlas_os.extensions.trading:TradingExtension"
voice = "atlas_os.extensions.voice:VoiceExtension"
jobs = "atlas_os.extensions.jobs:JobsExtension"

# Single-source the version from atlas_os/__init__.py (__version__). Bump it
# there and both the package and the package metadata stay in lockstep.
[tool.hatch.version]
path = "atlas_os/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["atlas_os"]

# The sdist ships the full source tree so a downstream build can reproduce the
# wheel (which force-includes scripts/, schemas/, templates/, skills/). hatchling
# reads .gitignore, so build artefacts and secrets are excluded automatically;
# this just makes the operational dirs explicit. (hatchling does not use a
# MANIFEST.in — that's a setuptools concept; this block is its equivalent.)
[tool.hatch.build.targets.sdist]
include = [
  "atlas_os",
  "scripts",
  "schemas",
  "templates",
  "skills",
  "docs",
  "tests",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  ".env.example",
]

# Bundle the scripts, schemas, and templates into the wheel so an installed
# `atlas` command works without the source checkout. These go into a top-level
# `atlas_os_data/` dir (NOT the `atlas_os` package) so they can never shadow the
# importable package in an editable install. In a source checkout the CLI uses
# the live repo files instead (see atlas_os/_paths.py).
[tool.hatch.build.targets.wheel.force-include]
"scripts" = "atlas_os_data/scripts"
"schemas" = "atlas_os_data/schemas"
"templates" = "atlas_os_data/templates"
"skills" = "atlas_os_data/skills"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: end-to-end tests that drive the real CLI and pipeline scripts (deselect with '-m \"not integration\"')",
]
