[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ─────────────────────────────────────────────────────────────────────────────
# Legacy redirect package.
#
# The project formerly published on PyPI as `atlas-os` was renamed to
# `eidetic-os` in the v4.0 cycle. This standalone stub keeps `pip install
# atlas-os` working: it carries no code of its own, depends on `eidetic-os` so
# the real package is pulled in, and raises a DeprecationWarning on import to
# point users at the new name. Build and publish it from THIS directory only —
# it is intentionally separate from the main package's pyproject.toml.
# ─────────────────────────────────────────────────────────────────────────────
[project]
name = "atlas-os"
version = "4.0.0"
description = "Deprecated — renamed to 'eidetic-os'. Installs eidetic-os and warns on import."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Paul Holland" }]
keywords = ["deprecated", "eidetic-os", "atlas-os"]
classifiers = [
  "Development Status :: 7 - Inactive",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]
# Pulling in eidetic-os means `pip install atlas-os` still gives users a working
# install of the renamed package. Pinned to the first eidetic-os release that
# carried the rename so the redirect resolves predictably.
dependencies = ["eidetic-os>=4.0.0"]

[project.urls]
Homepage = "https://github.com/paulholland511/eidetic-os"
"Renamed package" = "https://pypi.org/project/eidetic-os/"

[tool.hatch.build.targets.wheel]
packages = ["atlas_os"]
